--- a/style.css
+++ b/style.css
@@ -64,18 +64,14 @@ header nav ul li a{
   color: var(--text-color);
 }
 
-/* article div > img:hover {
-  transform: scale(150%);
-  transition: 1s ease;
-} */
-
 header nav ul li:hover {
   transform: scale(125%);
   transition: 1s ease;
 }
 
 a:hover {
-  transform: scale(110%) 1s ease;
+  transform: scale(110%);
+  transition: 1s ease;
 }
 
 /* Vormgeving footer */
@@ -83,11 +79,22 @@ a:hover {
 footer {
   position: absolute;
   bottom: 0;
+  right: 0;
   width: 100vw;
-  padding: .8rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+footer div {
+  position: absolute;
+  bottom: .6rem;
+  right: 1rem;
+  z-index: 2;
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+  color: white;
 }
 
 footer li, footer p {
@@ -100,9 +107,8 @@ footer span {
   height: 136px;
   max-width: 490px;
   min-width: 100vw;
-  right: 0;
-  position: absolute;
-  z-index: -1;
+
+  position: relative;
 }
 
 .mijnprojectenpagina {
@@ -169,7 +175,7 @@ section:first-of-type div p {
   border-radius: .5rem;
   margin: 1rem;
   border: none;
-  font-family: var(--fonts-text);
+  font-size: 15px;
 }
 
 
@@ -177,9 +183,48 @@ section:first-of-type div p {
   max-width: 50vw;
   border-radius: 100px 0;
   border: 1px solid var(--roze-color);
-    box-shadow: 0px 3px 31px var(--roze-color);
-    margin: 2rem
+  box-shadow: 0px 3px 31px var(--roze-color);
+  margin: 2rem
 }
+
+[class="home"] section:first-of-type>img, [class="contactpagina"] section:first-of-type > img{
+  height: auto;
+  display: block;
+  transition: box-shadow 0.3s ease;
+}
+
+[class="home"] section:first-of-type:hover > img, [class="contactpagina"] section:first-of-type:hover > img{
+  animation: shadow-snake 4s infinite linear;
+}
+
+@keyframes shadow-snake {
+  0% {
+    box-shadow: 0 0 10px 2px rgba(209, 128, 172, 0.8),
+                0 0 0 0 rgba(209, 128, 172, 0.8),
+                0 0 0 0 rgba(209, 128, 172, 0.8);
+  }
+  25% {
+    box-shadow: 10px 0 10px 2px rgba(209, 128, 172, 0.8),
+                0 0 0 0 rgba(209, 128, 172, 0.8),
+                -10px 0 10px 2px rgba(209, 128, 172, 0.8);
+  }
+  50% {
+    box-shadow: 10px 10px 10px 2px rgba(209, 128, 172, 0.8),
+                0 0 0 0 rgba(209, 128, 172, 0.8),
+                -10px -10px 10px 2px rgba(209, 128, 172, 0.8);
+  }
+  75% {
+    box-shadow: 0 10px 10px 2px rgba(209, 128, 172, 0.8),
+                -10px 0 10px 2px rgba(209, 128, 172, 0.8),
+                10px 0 10px 2px rgba(209, 128, 172, 0.8);
+  }
+  100% {
+    box-shadow: 0 0 10px 2px rgba(209, 128, 172, 0.8),
+                0 0 0 0 rgba(209, 128, 172, 0.8),
+                0 0 0 0 rgba(209, 128, 172, 0.8);
+  }
+}
+
 
 [class="home"] section:first-of-type>img {
   max-width: 50vw;
@@ -198,12 +243,31 @@ section:first-of-type div p {
   grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
 }
 
+[class="home"] main section:nth-of-type(2) > div article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 30vw;
+}
+
+
+
 [class="home"] main section:nth-of-type(2) > div img {
   max-width: 20vw;
 }
 
 .home section:nth-of-type(2) article a {
   color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.home section:nth-of-type(2) article a div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .home section article {
@@ -295,7 +359,6 @@ section:first-of-type div div {
   border-radius: 30px;
   box-shadow: 10px 5px 5px gray; 
 }
-
 
 
  /* details van zoek een boek pagina */
