--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ p, ul li, a {
 p, li {
   line-height: 1.5em;
 }
+
+p {
+  padding-top: 20px;
+}
 /* Vormgeving van de header */
 header nav {
   border-bottom: 1px solid white;
@@ -379,7 +383,7 @@ section:first-of-type div div {
  }
 
  section:nth-of-type(2) article article img, .pollutionparty section:nth-of-type(2)  article:nth-of-type(2) img{
-  max-width: 35vw;
+  max-width: 30vw;
   border: solid 1.5px var(--roze-color);
  }
  
@@ -416,7 +420,7 @@ section:first-of-type div div {
     width: 100vw;
   }
   section article, .pollutionparty section:nth-of-type(2) > div, section:nth-of-type(2) article  {
-    max-width: 70vw;
+    max-width: 60vw;
   }
  }
 
