--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ footer li, footer p {
 footer span {
   background-color: var(--roze-color);
   clip-path: polygon(100% 30%, 0 100%, 100% 100%);
-  height: 136px;
+  height: 160spx;
   max-width: 490px;
   min-width: 100vw;
 
