--- a/style.css
+++ b/style.css
@@ -108,10 +108,9 @@ footer li, footer p {
 footer span {
   background-color: var(--roze-color);
   clip-path: polygon(100% 30%, 0 100%, 100% 100%);
-  height: 160spx;
+  height: 160px;
   max-width: 490px;
   min-width: 100vw;
-
   position: relative;
 }
 
