--- a/style.css
+++ b/style.css
@@ -484,8 +484,11 @@ section:first-of-type div div {
 
 /* Detailpagina public city jazz */
 
-.public-city-jazz section > div img {
-object-position: none;
+.public-city-jazz section:nth-of-type(1) > div img {
+  object-position: 50% 1%;
+  max-height: 50rem;
+  object-fit: cover;
+  max-width: 100vw;
 }
 
  .langeImage > img {
