--- a/style.css
+++ b/style.css
@@ -474,7 +474,15 @@ section:first-of-type div div {
   }
 
   .home section article {
-    width: 90vw;
+    min-width: 90vw;
+  }
+  [class="contactpagina"] section:first-of-type {
+    flex-direction: column;
+
+  }
+
+  [class="contactpagina"] section:first-of-type img, [class="contactpagina"] section:first-of-type p  {
+    min-width: 80vw;
   }
 
   [class="home"] main section:nth-of-type(2) > div {
